--- a/index.html
+++ b/index.html
@@ -86,6 +86,26 @@
 
     <!-- // End of Header Section -->
 
+    <!-- Hero section -->
+    <div class="omr-hero bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-7 position-relative">
+                    <div class="omr-hero-content">
+                        <h1 class="mb-lg-4 mb-md-3">Build Your Dream Website With OMRhost</h1>
+                        <p class="mb-lg-4 mb-md-3 fs-16">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <button class="btn">Learn More <i class="fa-solid fa-right-long ms-2"></i></button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-5">
+                    <div class="omr-hero-img">
+                        <img src="assets/images/omr-hero-slider.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
 
   
